# fastsync

./: .gitignore  AGENTS.md  CHANGELOG.md  COMMANDS.md  Cargo.toml  PROJECT_SUMMARY.md  README.md  file_transfer_performance_analysis.md  high_performance_transfer_architecture.md  network_optimization_guide.md
.cargo/: config.toml
docs/: ARCHITECTURE.md  CONFIGURATION.md  PERFORMANCE.md
examples/: download.rs
src/: lib.rs  main.rs
src/download/: mod.rs
src/progress/: mod.rs
src/protocol/: http.rs  local.rs  mod.rs  sftp.rs
