[package]
name = "fastsync"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream", "http2"] }
url = "2.5"
indicatif = "0.17"
colored = "2.1"
async-trait = "0.1"
futures = "0.3"
bytes = "1.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
dirs = "5.0"
walkdir = "2.5"
chrono = "0.4"
humansize = "2.1"
russh = "0.52"
russh-sftp = "2.1"

[dev-dependencies]
tempfile = "3.10"
